Prevent cookie banner from being the LCP element
Currently, if a user has not accepted our cookie policy the
banner text gets classified as the Largest Contentful Paint
element on pages without a hero image or a lot of text above the
fold (i.e. most event pages).

The only way I've found to get around this is to load the banner
visible but off-screen and then transition the banner to the
main viewport in JS if the user hasn't accepted cookies yet.

--- a/app/webpacker/styles/dialog.scss
+++ b/app/webpacker/styles/dialog.scss
@@ -1,13 +1,27 @@
+@keyframes slide-up {
+  0% {
+    transform: translateY(110vh);
+  }
+  100% {
+    transform: translateY(0vh);
+  }
+}
+
 .dialog {
-  display: none;
+  display: flex;
   position: fixed;
-  top: 0;
   left: 0;
+  top: 0;
   width: 100%;
   min-height: 100vh;
   z-index: 1000;
   justify-content: center;
   align-items: center;
+  transform: translateY(110vh);
+
+  &.visible {
+    animation: slide-up 0s forwards;
+  }
 
   &__background {
     opacity: .8;
